--- a/frontend/web/uw/sass/compare.scss
+++ b/frontend/web/uw/sass/compare.scss
@@ -39,6 +39,10 @@
 				text-align: center;
 				padding-bottom: 26px;
 			}
+				img {
+					display: inline-block;
+					width: 80px;
+				}
 			.two_part {
 				display: flex;
 				justify-content: space-between;
