--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -3,7 +3,6 @@
 }
 
 .timeline {
-	font-family: "Proxima Nova";
 	color: #010211;
 
 	.top_block {
@@ -12,12 +11,21 @@
 	
 	h1 {
 		text-align: center;
-		font-size: 40px;
-		color: #fff;
+		font: 55px 'Proxima Nova Regular', sans-serif;
+		font-weight: bold;
+		color: #3B0F50;
 		text-transform: uppercase;
 		margin-top: 73px;
-		margin-bottom: 19px;
+		margin-bottom: 50px;
 		line-height: 39px;
+		span {
+			display: block;
+			margin-top: 10px;
+			font-size: 30px;
+		}
+			@media screen and (max-width: 1000px) {
+				font-size: 22px;
+			}
 		@media screen and (max-width: 1000px) {
 			font-size: 30px;
 			padding-left: 20px;
@@ -35,44 +43,54 @@
 		         -o-transition: margin-left 1s ease-out;
 			        transition: margin-left 1s ease-out;
 		.item {
+			position: relative;
 			cursor: pointer;
+			.image img {
+				display: block;
+				width: 100%;
+			}
 			.date {
 				padding: 30px 0 0 30px;
-				height: 100px;
+				height: 120px;
 				.date-item {
-					color: #dbc8ae;
+					color: #010211;
 					font-size: 18px;
-					line-height: 24px;	
+					line-height: 24px;
+					transition: .2s;
 				}
 			}
 
-			&.active > .date {
-				padding-top: 0px;
+			&.active .dot {
+				background-color: #C39C17 !important;
+				border-color: #fff !important;
 			}
 		
-			&.active > .date > .date-item {
-				font-size: 40px;
-				line-height: 40px;
+			&.active .date .date-item {
+				font: 33px 'Proxima Nova Bl', sans-serif;
+				line-height: 30px;
+				color: #C59D17;
 			}
 
 			.hr {
-				border: 1.6px solid #dbc8ae;
+				border: 3px solid #fff;
 			}
 			
 			.description {
 		    	margin: 0 100px 0 0;
+				padding-bottom: 30px;
 				width: 510px;
-				height: 450px;
+				height: 100%;
 				background: #fff;
 
 				.dot {
 					position: absolute;
+					top: 4px;
+					left: 0;
     				background-color: #fff;
-    				border: 3px solid #dbc8ae;
+    				border: 3px solid #D9D9D9;
     				border-radius: 50%;
     				height: 26px;
     				width: 26px;
-    				margin: -13px 0 0 15px;					
 				}
 
 				.dot + p {
@@ -90,7 +108,7 @@
 
 				.circle {
 					opacity: 0;
-					transition: opacity 2s ease-out;					
+					transition: opacity 1s ease-out;
 					pointer-events: none;
 					width: 0;
 					height: 0;
@@ -100,8 +118,8 @@
 					pointer-events: unset;
 					opacity: 1;
 					position: absolute;
-					top: 75%;
-					border: 2px solid #dbc8ae;
+					top: 35%;
+					border: 1px solid #3B1050;
 					border-radius: 50%;
 					cursor: pointer;
 					font-size: 20px;
@@ -122,20 +140,37 @@
 						position: absolute;
 						width: 100%;
 						height: 100%;
-						transition: transform .5s;	
+						color: #fff;
+						transition: transform .5s;
 					}
-
-					.prev {
-						background: url('../../images/prev_ico.png') center no-repeat;
+					.prev::after, .next::after {
+						content: '';
+						display: block;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						width: 45px;
+						height: 45px;
+						-webkit-border-radius: 50%;
+						-moz-border-radius: 50%;
+						border-radius: 50%;
+						background: #3B1050;
+						transform: translate(-50%, -50%);
+						transition: .2s;
+						z-index: 0;
 					}
-
-					.next {
-						background: url('../../images/next_ico.png') center no-repeat;
+					.prev i, .next i {
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						z-index: 1;
 					}
 
 					&:hover {
-						.prev, .next {
-							transform: scale(1.3);
+						.prev::after, .next::after {
+							width: 55px;
+							height: 55px;
 						}
 					}
 				}
@@ -144,7 +179,7 @@
 			@media screen and (min-width: 1366px) and (max-width: 1599px) {
 				.date {
 					padding: 25.5px 0 0 25.5px;
-					height: 85px;
+					height: 120px;
 					.date-item {
 						font-size: 15.3px;
 						line-height: 20.4px;	
@@ -163,7 +198,7 @@
 				.description {
 		    		margin: 0 85px 0 0;
 					width: 433.5px;
-					height: 382.5px;
+					height: 100%;
 
 					.dot {
     					border: 2.55px solid #dbc8ae;						
