--- a/frontend/web/uw/sass/history.scss
+++ b/frontend/web/uw/sass/history.scss
@@ -1,22 +1,23 @@
-.law {
+.history {
   .top_block.white .go_front {
     border-color: #A1A6AF;
     color: #A1A6AF;
   }
-  .law-header {
+  .history-header {
     margin-top: -133px;
-    background: url('../../images/law.jpg') no-repeat center;
+    background: url('../../images/history/history_bg.jpg') no-repeat center;
     -webkit-background-size: cover;
     background-size: cover;
-    padding-top: 270px;
+    padding-top: 220px;
     h1 {
       text-align: center;
-      font: 55px 'Proxima Nova Regular', sans-serif;
+      font: 60px 'Proxima Nova Regular', sans-serif;
       font-weight: bold;
       color: #fff;
       text-transform: uppercase;
-      line-height: 39px;
-      letter-spacing: 1px;
+      line-height: 70px;
+      letter-spacing: 3px;
+      text-shadow: 2px 6px 0 #3B1050;
     }
     h1::after {
       content: '';
@@ -54,7 +55,7 @@
       }
     }
   }
-  .law-content {
+  .history-content {
     padding-top: 80px;
     .urls {
       padding: 0;
@@ -73,15 +74,7 @@
       width: 70px;
       height: 6px;
       background: #C59D17;
-      margin: 30px 0;
-    }
-    .facts {
-      padding: 0;
-      margin: 0 0 30px;
-      list-style: none;
-      li:not(:last-child) {
-        margin-bottom: 5px;
-      }
+      margin: 50px 0;
     }
     .btn-wrap .btn {
       font-size: 15px;
@@ -91,57 +84,7 @@
       border-color: #C59D17;
       background: #C59D17;
     }
-    .pagination {
-      width: 100%;
-      margin-top: 100px;
-      text-align: center;
-      li.prev a,
-      li.prev span {
-        background: transparent;
-        font-size: 20px;
-      }
-      li.next a,
-      li.next a {
-        background: transparent;
-        font-size: 20px;
-      }
-      li {
-        margin: 0px 4px;
-        display: inline-block;
-        a {
-          font-size: 15px;
-          line-height: 38px;
-          width: 42px;
-          display: inline-block;
-          border: 1px solid #A1A6AF;
-          color: #010211;
-          padding: 0px;
-          text-align: center;
-        }
-        &.active {
-          a {
-            color: white;
-            background: #3B0F50;
-            border: 1px solid #3B0F50;
-          }
-        }
-        &.next,&.prev {
-          a {
-            border:1px solid transparent;
-          }
-          span {
-            border:1px solid transparent;
-            line-height: 38px;
-            width: 38px;
-            text-align: center;
-            display: inline-block;
-            padding: 0px;
-          }
-        }
-      }
-    }
-    .law-text {
-      margin-top: 70px;
+    .history-text {
       h2 {
         margin-bottom: 30px;
         font: 35px 'Proxima Nova Regular';
@@ -151,7 +94,10 @@
       }
       p {
         margin-bottom: 25px;
-        font-size: 18px;
+        font: 18px 'Proxima Nova Regular', sans-serif;
+        strong {
+          font-family: 'Proxima Nova Bl', sans-serif;
+        }
       }
     }
   }
