--- a/frontend/web/uw/stylesheets/uw.css
+++ b/frontend/web/uw/stylesheets/uw.css
@@ -156,14 +156,15 @@ body {
   font-weight: 300;
   color: #ffffff;
   padding-top: 46px;
+  text-align: center;
 }
-/* line 129, ../sass/uw.scss */
+/* line 130, ../sass/uw.scss */
 .gallery_popup .close {
   float: none;
   padding-top: 20px;
   opacity: 1;
 }
-/* line 133, ../sass/uw.scss */
+/* line 134, ../sass/uw.scss */
 .gallery_popup .close img {
   width: 120px;
   height: 120px;
@@ -171,18 +172,18 @@ body {
   display: block;
 }
 
-/* line 141, ../sass/uw.scss */
+/* line 142, ../sass/uw.scss */
 #cboxOverlay {
   background: #3B0F50;
   opacity: 0.9;
 }
 
-/* line 145, ../sass/uw.scss */
+/* line 146, ../sass/uw.scss */
 .popups_info {
   display: none;
 }
 
-/* line 151, ../sass/uw.scss */
+/* line 152, ../sass/uw.scss */
 .bottom_gallery .title_bottom_gallery {
   font-size: 15px;
   color: #000108;
@@ -192,21 +193,21 @@ body {
   padding: 0px 10px;
   padding-bottom: 29px;
 }
-/* line 160, ../sass/uw.scss */
+/* line 161, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img {
   position: relative;
 }
-/* line 162, ../sass/uw.scss */
+/* line 163, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video {
   display: block;
 }
-/* line 164, ../sass/uw.scss */
+/* line 165, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video img {
   display: block;
   width: 100%;
   height: auto;
 }
-/* line 169, ../sass/uw.scss */
+/* line 170, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video:before {
   content: '';
   position: absolute;
@@ -218,7 +219,7 @@ body {
   background-size: 134px;
   z-index: 1;
 }
-/* line 180, ../sass/uw.scss */
+/* line 181, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video::after {
   content: '';
   position: absolute;
@@ -230,7 +231,7 @@ body {
   background-size: 134px;
   z-index: 0;
 }
-/* line 192, ../sass/uw.scss */
+/* line 193, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img iframe {
   position: absolute;
   top: 0px;
@@ -240,34 +241,34 @@ body {
   display: none;
 }
 
-/* line 203, ../sass/uw.scss */
+/* line 204, ../sass/uw.scss */
 .blue_top_bg {
   position: relative;
 }
 
-/* line 216, ../sass/uw.scss */
+/* line 217, ../sass/uw.scss */
 #object-map {
   position: relative;
   z-index: 1;
 }
 
-/* line 221, ../sass/uw.scss */
+/* line 222, ../sass/uw.scss */
 .white_text {
   color: white !important;
 }
 
-/* line 224, ../sass/uw.scss */
+/* line 225, ../sass/uw.scss */
 .purple_text {
   color: #3B0F50 !important;
 }
 
-/* line 228, ../sass/uw.scss */
+/* line 229, ../sass/uw.scss */
 .bottom_select_gallery {
   padding-top: 122px;
   display: flex;
   flex-wrap: wrap;
 }
-/* line 232, ../sass/uw.scss */
+/* line 233, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery {
   width: 25%;
   position: relative;
@@ -275,12 +276,12 @@ body {
   overflow: hidden;
 }
 @media screen and (max-width: 999px) {
-  /* line 232, ../sass/uw.scss */
+  /* line 233, ../sass/uw.scss */
   .bottom_select_gallery .select_gallery {
     width: 50%;
   }
 }
-/* line 240, ../sass/uw.scss */
+/* line 241, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:before {
   content: '';
   display: none;
@@ -291,17 +292,17 @@ body {
   height: 100%;
   z-index: 2;
 }
-/* line 251, ../sass/uw.scss */
+/* line 252, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover:before {
   display: block;
 }
-/* line 254, ../sass/uw.scss */
+/* line 255, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover img {
   -webkit-transform: scale(1.4);
   -ms-transform: scale(1.4);
   transform: scale(1.4);
 }
-/* line 260, ../sass/uw.scss */
+/* line 261, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery img {
   display: block;
   width: 100%;
