Мелкие правки по тикетам

--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -115,6 +115,10 @@ body {
 #cboxTitle {
 	display: none;
 }
+.map-title {
+	font-family: "Proxima Nova Regular", sans-serif;
+	font-weight: bold;
+}
 .gallery_popup {
 	img {
 		max-width: 100%;
